# ros_body_recognition

./: CMakeLists.txt  README.md  package.xml
include/: histogram.hpp  lbp.hpp
msg/: SpatialFeature.msg  SpatialFeatureArray.msg
src/: histogram.cpp  lbp.cpp  main.cpp
